Update Java_setup.md