@@ -6,3 +6,10 @@
 5. launch minecraft
 
 # Server
+1. go to https://papermc.io/downloads#Paper-1.15 and download latest version of server
+2. install java 8 JRE  (or latest)
+3. java -Xms512M -Xmx1024M -XX:MaxPermSize=128M -jar paperclip.jar
+
+REFERENCE:
+* https://www.vultr.com/docs/setup-paperspigot-on-ubuntu
+* https://minecraft.gamepedia.com/Tutorials/Setting_up_a_server
